--- a/hp/6746836423/index.html
+++ b/hp/6746836423/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;" />
-    <title>NeutraSpace</title>
+    <title>SmartCleanup: Storage Clean</title>
     <style type="text/css"></style>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script>
@@ -26,7 +26,7 @@
     </div>
 
     <img src='logo.png' width='80' height='80' style='margin-top:60px;border-radius:15px;'>
-    <p style='font-weight:bold;font-size:180%;font-family:"San Francisco text","Serif";color:rgb(255, 255, 255);margin-top:30px;'>NeutraSpace</p>
+    <p style='font-weight:bold;font-size:180%;font-family:"San Francisco text","Serif";color:rgb(255, 255, 255);margin-top:30px;'>SmartCleanup: Storage Clean</p>
     <p style='font-weight:lighter;font-size:100%;font-family:"San Francisco text","Serif";color:rgb(255, 255, 255);margin-top:-20px;'>Visual clarity：digital life</p>
     <img src='appStore.png' width='138' height='40' style='margin-top:30px;'><br>
     <div style='margin-top:80px;'>
